[project]
name = "keybeat"
version = "0.1.0"
description = "Biblioteca Python para detectar o tom (maior/menor) e o BPM de arquivos de áudio (MP3, WAV, FLAC)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "therealtxr", email = "therealtxr@gmail.com" }
]
keywords = ["bpm", "chave musical", "tonalidade", "audio", "python"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Multimedia :: Sound/Audio :: Analysis"
]
dependencies = [
  "librosa",
  "soundfile",
  "numpy",
  "scipy",
  "audioread"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
