                    [project]
name = "keybeat-txrr"
version = "0.1.0"
description = "Detecta o tom e o BPM de arquivos de áudio (MP3, WAV, FLAC)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "therealtxr", email = "therealtxr@gmail.com"}
]
dependencies = [
    "librosa>=0.10.1",
    "numpy>=1.24.0",
    "soundfile>=0.12.1",
    "audioread>=3.0.1"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
